2016-09-26 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/util/ipmi-util.c (ipmi_get_random): Remove call to
	gcry_randomize.  There's no guarantee gcrypt was initialized.
	
2016-09-22 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/util/ipmi-util.c (ipmi_get_random): Fix corner case
	where signed/unsigned ints are compared.

2016-09-22 Albert Chu <chu11@llnl.gov>

	* libipmiconsole/: Do not close user fd if use has retrieved it
	from ipmiconsole_ctx_fd.  Double close can lead to race
	conditions.

2016-09-20 Albert Chu <chu11@llnl.gov>

	* libipmiconsole/: Create state variable to manage context destroy
	state remove corner case of potential segfault on teardown.

2016-09-06 Albert Chu <chu11@llnl.gov>

	* libipmiconsole/ipmiconsole_ctx.c (__ipmiconsole_ctx_connection_cleanup):
	Add missing call to ipmiconsole_ctx_config_cleanup.

	* libfreeipmi/libcommon/ipmi-crypt.c: Fix potential issue with
	multithreaded tracing, call gpg_strerror_r intead of gcry_strerror
	when tracing.

2016-08-30 Albert Chu <chu11@llnl.gov>
	
	* configure.ac; Fix output comment error.

2016-08-02 Albert Chu <chu11@llnl.gov>
	
	* ipmi-oem/: Add Gigabyte get/set-nic-mode commands.

2016-08-01 Albert Chu <chu11@llnl.gov>

	* common/toolcommon/tool-sensor-common.h: Increase max sensor
	types to 128.

2016-08-01 Thomas Grohmann <thomas.grohmann@atos.net>

	* common/toolcommon/tool-sensor-common.h: Increase max record ids
	to 4096.

2016-07-29 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/spec/: Add Gigabyte IANA manufacturer macro
	and Product MD90-FS0-ZB macro.

	* libfreeipmi/sel/: Add Gigabyte MD90-FS0-ZB OEM SEL support.

2016-07-29 Albert Chu <chu11@llnl.gov>

	* ipmi-oem/: Support get/set-bmc-services for Intel motherboards.

2016-07-11 Albert Chu <chu11@llnl.gov>

	* Document support of Intel S2600KPR.

	* libfreeipmi/include/freeipmi/spec/ipmi-product-id-spec.h,
	libfreeipmi/sel/ipmi-sel-string.c: Add code indicating support for
	Intel S2600KPR.

2016-07-11 Albert Chu <chu11@llnl.gov>
